placed ul elements inside of divs to fix row-flex spacing when lists were hidden. Updated handleclick function to reflect changes #2

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,6 @@
 .hidden {
   display: none;
+  height: 0;
 }
 
 .container {
